EventList uden styling

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,11 @@
 <html lang="da">
 
 <head>
-  <!-- HUSK TITEL HER !!! -->
-  <title></title>
+  <title>Det Utrolige Teater</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <!-- HER SKAL NOGET -->
-  <meta name="description" content="Svendeprove" />
+  <meta name="description" content="Det Utrolige Teater giver både børn og voksne muligheden for at få fantastiske oplevelser inden for den kreative verden" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 </head>
 
